--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^2.0.5",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
@@ -18,6 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.17",
+        "typescript": "^5.8.2",
         "vite": "^6.0.11"
     },
     "dependencies": {
