--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.8.2",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "react-router-dom": "^7.3.0",
+        "shadcn": "^2.4.0-canary.14"
     }
 }
