--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
         "shadcn": "^2.4.0-canary.14",
         "tw-elements": "^2.0.0"
