--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.484.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
-        "shadcn": "^2.4.0-canary.14",
+        "shadcn": "^2.3.0",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss-animate": "^1.0.7",
         "tw-elements": "^2.0.0"
     }
 }
