--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^18.13.0",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@types/react-table": "^7.7.20",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
@@ -30,7 +31,9 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.484.0",
         "react-icons": "^5.5.0",
+        "react-paginate": "^8.3.0",
         "react-router-dom": "^7.3.0",
+        "react-table": "^7.8.0",
         "shadcn": "^2.3.0",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
