--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-apexcharts": "^1.7.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
+        "react-select": "^5.10.1",
         "shadcn": "^2.3.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.2",
