--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tabs": "^1.1.11",
+        "@tanstack/react-table": "^8.21.3",
         "apexcharts": "^4.7.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
