--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
+        "@radix-ui/react-select": "^2.2.4",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tabs": "^1.1.11",
         "@tanstack/react-table": "^8.21.3",
