--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.484.0",
+        "next-themes": "^0.4.6",
         "react-apexcharts": "^1.7.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
