--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-popover": "^1.1.13",
         "@radix-ui/react-select": "^2.2.4",
-        "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-slot": "^1.2.2",
         "@radix-ui/react-tabs": "^1.1.11",
         "@tanstack/react-table": "^8.21.3",
         "apexcharts": "^4.7.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "lucide-react": "^0.484.0",
         "next-themes": "^0.4.6",
         "react-apexcharts": "^1.7.0",
+        "react-day-picker": "^8.10.1",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
         "react-select": "^5.10.1",
