chore🧹: clearing errors for deployment
- Updated TypeScript configuration to exclude vendor directories.
- biglang may ts errors sa login, kagabi wala tf.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,5 +112,10 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": [
+    "vendor",
+    "**/vendor/**/*",
+    "**/vendor/laravel/breeze/stubs/**/*"
+  ]
 }
