--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@radix-ui/react-popover": "^1.1.13",
         "@radix-ui/react-select": "^2.2.4",
         "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.1.11",
         "@tanstack/react-table": "^8.21.3",
         "apexcharts": "^4.7.0",
